--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/x-icon" href="/src/32x32.ico" />
+		<!-- <link rel="icon" type="image/x-icon" href="/src/32x32.ico" /> -->
 		%sveltekit.head%
 		<style>
 			html {
